FIX: position loader in payouts page on mobile fixed

--- a/src/styles/components/_loader.scss
+++ b/src/styles/components/_loader.scss
@@ -178,7 +178,10 @@
 
   .payouts & {
     .lds-dual-ring {
-      top: 70px;
+
+      @include media-breakpoint-up($desktop-breakpoint) {
+        top: 70px;
+      }
     }
   }
 
